# rcc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  funding.json  index.html
.github/workflows/: ci.yml  pages.yml
bench/: bench.sh
docs/: astana-hub-application-ru.md  github-sponsors-profile.md  nlnet-proposal.md  sovereign-tech-proposal.md
editors/vscode/: settings.json
include/: assert.h  ctype.h  errno.h  float.h  limits.h  locale.h  math.h  pthread.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
src/: ast.rs  backend_wasm.rs  backend_x64.rs  codegen.rs  driver.rs  error.rs  ir.rs  ir_opt.rs  lexer.rs  lint.rs  lower.rs  lsp.rs  main.rs  optimize.rs  parser.rs  peephole.rs  preprocess.rs  regalloc.rs  ssa.rs  wasm_encode.rs
test_chibicc/: arith.c  cast.c  control.c  enum.c  float.c  pointer.c  preprocess.c  string.c  struct.c  test.h  typedef.c
test_chibicc_orig/: test.h
test_inputs/: array_test.c  assert_arith.c  assert_control.c  assert_float.c  assert_pointer.c  assert_struct.c  bad.c  c11_features.c  c11_phase5.c  char_test.c  cjson_mini.c  compound_assign.c  e2e.c  e2e_fail.c  fibonacci.c  five_args.c  float_test.c  global_var.c  hello.c  init_list.c  int_struct.c  lint_test.c  loop_printf.c  loops.c  nested_calls.c  operators.c  optimize.c  parse_pattern.c  pointers.c  preprocess.c  preprocess2.c  printf_args.c  simple.c  six_args.c  sprint2.c  sprintf_double.c  string_test.c  strtod_test.c  struct_assign.c  struct_chain.c  (+7 more)
tests/: integration.rs
